feat: end-to-end microservices event flow with idempotent game stats, OpenSearch sync/search, and signed downloads
Kafka purchase/download events -> Mongo idempotency counters; best-effort OpenSearch indexing; abbreviation migration; signed download URLs; frontend/service wiring updates.